@@ -1,6 +1,9 @@
 Revision history for Dist-Zilla-Plugin-DynamicPrereqs
 
 {{$NEXT}}
+          - new '-condition' option, as sugar to provide expressions to be
+            inserted into Makefile.PL (definitions of referenced subroutines
+            are automatically included)
 
 0.013     2015-05-30 19:16:03Z
           - require a new enough Module::CoreList in tests to ensure is_core()
